--- a/tech/index.html
+++ b/tech/index.html
@@ -3,11 +3,11 @@
 <meta http-equiv=x-ua-compatible content="IE=edge">
 <meta name=viewport content="width=device-width,initial-scale=1,shrink-to-fit=no">
 <meta name=robots content="index, follow">
-<title>Categories | Anis Khan</title>
+<title>Tech | Anis Khan</title>
 <meta name=keywords content>
 <meta name=description content="Enjoying life">
 <meta name=author content="Anis Khan">
-<link rel=canonical href=https://aniskhan001.me/categories/>
+<link rel=canonical href=https://aniskhan001.me/tech/>
 <meta name=google-site-verification content="XYZabc">
 <meta name=yandex-verification content="XYZabc">
 <meta name=msvalidate.01 content="XYZabc">
@@ -20,17 +20,18 @@
 <meta name=theme-color content="#2e2e33">
 <meta name=msapplication-TileColor content="#2e2e33">
 <meta name=generator content="Hugo 0.88.1">
-<link rel=alternate type=application/rss+xml href=https://aniskhan001.me/categories/index.xml>
+<link rel=alternate type=application/rss+xml href=https://aniskhan001.me/tech/index.xml>
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-HKTS2WR0QV"></script>
 <script>var doNotTrack=!1;if(!doNotTrack){window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)}gtag('js',new Date),gtag('config','G-HKTS2WR0QV',{anonymize_ip:!1})}</script>
-<meta property="og:title" content="Categories">
+<meta property="og:title" content="Tech">
 <meta property="og:description" content="Enjoying life">
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://aniskhan001.me/categories/"><meta property="og:image" content="https://aniskhan001.me/%3Clink%20or%20path%20of%20image%20for%20opengraph,%20twitter-cards%3E"><meta property="og:site_name" content="Anis Khan">
+<meta property="og:url" content="https://aniskhan001.me/tech/"><meta property="og:image" content="https://aniskhan001.me/%3Clink%20or%20path%20of%20image%20for%20opengraph,%20twitter-cards%3E"><meta property="og:site_name" content="Anis Khan">
 <meta name=twitter:card content="summary_large_image">
 <meta name=twitter:image content="https://aniskhan001.me/%3Clink%20or%20path%20of%20image%20for%20opengraph,%20twitter-cards%3E">
-<meta name=twitter:title content="Categories">
+<meta name=twitter:title content="Tech">
 <meta name=twitter:description content="Enjoying life">
+<script type=application/ld+json>{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Tech","item":"https://aniskhan001.me/tech/"}]}</script>
 </head>
 <body class=list id=top>
 <script>localStorage.getItem("pref-theme")==="dark"?document.body.classList.add('dark'):localStorage.getItem("pref-theme")==="light"?document.body.classList.remove('dark'):window.matchMedia('(prefers-color-scheme: dark)').matches&&document.body.classList.add('dark')</script>
@@ -55,10 +56,26 @@
 </header>
 <main class=main>
 <header class=page-header>
-<h1>Categories</h1>
+<div class=breadcrumbs>
+<a href=https://aniskhan001.me/>Home</a>
+</div>
+<h1>Tech</h1>
 </header>
-<ul class=terms-tags>
-</ul>
+<article class=post-entry>
+<header class=entry-header>
+<h2>
+Logging with Fluent Bit & InfluxDB
+</h2>
+</header>
+<section class=entry-content>
+<p>Motivation For a small Kubernetes cluster, I needed a minimal dashboard where logs from all the running applications in the Kubernetes environment can be viewed or grepped from one place.
+I thought about ELK (Elastic + Logstash + Kibana) first, but then I realized my small cluster has a config of only 2 nodes with a total 2 vCPU and 4GB RAM, which wouldn’t be a wise option for Elastic to run since it requires more resources to run smoothly....</p>
+</section>
+<footer class=entry-footer>
+April 15, 2020&nbsp;·&nbsp;5 min&nbsp;·&nbsp;Anis Khan
+</footer>
+<a class=entry-link aria-label="post link to Logging with Fluent Bit & InfluxDB" href=https://aniskhan001.me/tech/logging-with-fluent-bit-influxdb-fig/></a>
+</article>
 </main><footer class=footer>
 <span>&copy; 2021 <a href=https://aniskhan001.me/>Anis Khan</a></span>
 <span>&#183;</span>
