--- a/tech/how-i-reduced-the-size-of-a-docker-image/index.html
+++ b/tech/how-i-reduced-the-size-of-a-docker-image/index.html
@@ -12,7 +12,7 @@ FROMpython:3.6ENV PYTHONUNBUFFERED 1ENV TZ=Asia/DhakaRUN ln -snf /usr/share/zone
 <meta name=google-site-verification content="XYZabc">
 <meta name=yandex-verification content="XYZabc">
 <meta name=msvalidate.01 content="XYZabc">
-<link href=/assets/css/stylesheet.min.5f6e3500453aeb1f36eeb5a2e4b919d2aabfc9373855f75bc66eaf514b9b13be.css integrity="sha256-X241AEU66x827rWi5LkZ0qq/yTc4Vfdbxm6vUUubE74=" rel="preload stylesheet" as=style>
+<link href=/assets/css/stylesheet.min.47dee8a689fb52c79b5f3be8cd93bd4664418f5d92d879fe36b4ee3c469f9e15.css integrity="sha256-R97opon7UsebXzvozZO9RmRBj12S2Hn+NrTuPEafnhU=" rel="preload stylesheet" as=style>
 <link rel=icon href=https://aniskhan001.me/icon/favicon.ico>
 <link rel=icon type=image/png sizes=16x16 href=https://aniskhan001.me/icon/favicon16x16.png>
 <link rel=icon type=image/png sizes=32x32 href=https://aniskhan001.me/icon/favicon32x32.png>
@@ -47,8 +47,7 @@ FROMpython:3.6ENV PYTHONUNBUFFERED 1ENV TZ=Asia/DhakaRUN ln -snf /usr/share/zone
 <header class=header>
 <nav class=nav>
 <div class=logo>
-<a href=https://aniskhan001.me/ accesskey=h title="Home (Alt + H)">
-<img src=/icon/favicon.ico alt=logo aria-label=logo height=35>Home</a>
+<a href=https://aniskhan001.me/ accesskey=h title="💥 Home (Alt + H)">💥 Home</a>
 <span class=logo-switches>
 </span>
 </div>
@@ -63,7 +62,8 @@ FROMpython:3.6ENV PYTHONUNBUFFERED 1ENV TZ=Asia/DhakaRUN ln -snf /usr/share/zone
 <article class=post-single>
 <header class=post-header>
 <div class=breadcrumbs>
-<a href=https://aniskhan001.me/>Home</a>&nbsp;»&nbsp;<a href=https://aniskhan001.me/tech/>🧑‍💻 Tech Blogs</a>
+<a href=https://aniskhan001.me/>💥 Home</a>
+<a href=https://aniskhan001.me/tech/>🧑‍💻 Tech Blogs</a>
 </div>
 <h1 class=post-title>
 How I reduced the size of a Docker image
