--- a/tech/index.html
+++ b/tech/index.html
@@ -5,13 +5,13 @@
 <meta name=robots content="index, follow">
 <title>🧑‍💻 Tech Blogs | Anis Khan</title>
 <meta name=keywords content>
-<meta name=description content="Enjoying life">
+<meta name=description content="Technical blogs written by Anis Khan">
 <meta name=author content="Anis Khan">
 <link rel=canonical href=https://aniskhan001.me/tech/>
 <meta name=google-site-verification content="XYZabc">
 <meta name=yandex-verification content="XYZabc">
 <meta name=msvalidate.01 content="XYZabc">
-<link href=/assets/css/stylesheet.min.5f6e3500453aeb1f36eeb5a2e4b919d2aabfc9373855f75bc66eaf514b9b13be.css integrity="sha256-X241AEU66x827rWi5LkZ0qq/yTc4Vfdbxm6vUUubE74=" rel="preload stylesheet" as=style>
+<link href=/assets/css/stylesheet.min.47dee8a689fb52c79b5f3be8cd93bd4664418f5d92d879fe36b4ee3c469f9e15.css integrity="sha256-R97opon7UsebXzvozZO9RmRBj12S2Hn+NrTuPEafnhU=" rel="preload stylesheet" as=style>
 <link rel=icon href=https://aniskhan001.me/icon/favicon.ico>
 <link rel=icon type=image/png sizes=16x16 href=https://aniskhan001.me/icon/favicon16x16.png>
 <link rel=icon type=image/png sizes=32x32 href=https://aniskhan001.me/icon/favicon32x32.png>
@@ -24,13 +24,13 @@
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-HKTS2WR0QV"></script>
 <script>var doNotTrack=!1;if(!doNotTrack){window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)}gtag('js',new Date),gtag('config','G-HKTS2WR0QV',{anonymize_ip:!1})}</script>
 <meta property="og:title" content="🧑‍💻 Tech Blogs">
-<meta property="og:description" content="Enjoying life">
+<meta property="og:description" content="Technical blogs written by Anis Khan">
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://aniskhan001.me/tech/"><meta property="og:image" content="https://aniskhan001.me/%3Clink%20or%20path%20of%20image%20for%20opengraph,%20twitter-cards%3E"><meta property="og:site_name" content="Anis Khan">
 <meta name=twitter:card content="summary_large_image">
 <meta name=twitter:image content="https://aniskhan001.me/%3Clink%20or%20path%20of%20image%20for%20opengraph,%20twitter-cards%3E">
 <meta name=twitter:title content="🧑‍💻 Tech Blogs">
-<meta name=twitter:description content="Enjoying life">
+<meta name=twitter:description content="Technical blogs written by Anis Khan">
 <script type=application/ld+json>{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"🧑‍💻 Tech Blogs","item":"https://aniskhan001.me/tech/"}]}</script>
 </head>
 <body class=list id=top>
@@ -42,8 +42,7 @@
 <header class=header>
 <nav class=nav>
 <div class=logo>
-<a href=https://aniskhan001.me/ accesskey=h title="Home (Alt + H)">
-<img src=/icon/favicon.ico alt=logo aria-label=logo height=35>Home</a>
+<a href=https://aniskhan001.me/ accesskey=h title="💥 Home (Alt + H)">💥 Home</a>
 <span class=logo-switches>
 </span>
 </div>
@@ -57,9 +56,12 @@
 <main class=main>
 <header class=page-header>
 <div class=breadcrumbs>
-<a href=https://aniskhan001.me/>Home</a>
+<a href=https://aniskhan001.me/>💥 Home</a>
 </div>
 <h1>🧑‍💻 Tech Blogs</h1>
+<div class=post-description>
+Technical blogs written by Anis Khan
+</div>
 </header>
 <article class=post-entry>
 <header class=entry-header>
