--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html><html lang=en dir=auto>
-<head><meta charset=utf-8>
+<head>
+<meta name=generator content="Hugo 0.88.1"><meta charset=utf-8>
 <meta http-equiv=x-ua-compatible content="IE=edge">
 <meta name=viewport content="width=device-width,initial-scale=1,shrink-to-fit=no">
 <meta name=robots content="index, follow">
@@ -8,8 +9,7 @@
 <meta name=description content="Enjoying life | Anis Khan">
 <meta name=author content="Anis Khan">
 <link rel=canonical href=https://aniskhan001.me/>
-<link crossorigin=anonymous href=/assets/css/stylesheet.min.9907859f1602a742fdc62d4c9e2e249f9963bea382ef6df063dede9ce9e2e8dd.css integrity="sha256-mQeFnxYCp0L9xi1Mni4kn5ljvqOC723wY97enOni6N0=" rel="preload stylesheet" as=style>
-<link rel=preload href=/img/profile.jpg as=image>
+<link crossorigin=anonymous href=/assets/css/stylesheet.e60a8f39ee6dfdeab01f9f15dd9f5b53aa8b3fb15b6a6d5c43868ea04156b023.css integrity="sha256-5gqPOe5t/eqwH58V3Z9bU6qLP7Fbam1cQ4aOoEFWsCM=" rel="preload stylesheet" as=style>
 <link rel=icon href=https://aniskhan001.me/icon/favicon.ico>
 <link rel=icon type=image/png sizes=16x16 href=https://aniskhan001.me/icon/favicon16x16.png>
 <link rel=icon type=image/png sizes=32x32 href=https://aniskhan001.me/icon/favicon32x32.png>
@@ -17,7 +17,6 @@
 <link rel=mask-icon href=https://aniskhan001.me/icon/apple_touch_icon.png>
 <meta name=theme-color content="#2e2e33">
 <meta name=msapplication-TileColor content="#2e2e33">
-<meta name=generator content="Hugo 0.88.1">
 <link rel=alternate type=application/rss+xml href=https://aniskhan001.me/index.xml>
 <link rel=alternate type=application/json href=https://aniskhan001.me/index.json>
 <noscript>
@@ -43,7 +42,7 @@
 <div class=logo>
 <a href=https://aniskhan001.me/ accesskey=h title="💥 Home (Alt + H)">💥 Home</a>
 <span class=logo-switches>
-</span>
+</div>
 </div>
 <ul id=menu>
 <li>
@@ -63,7 +62,8 @@
 </nav>
 </header>
 <main class=main><div class=profile>
-<div class=profile_inner><img src=https://aniskhan001.me/img/profile.jpg alt="Anis Khan" height=120 width=120>
+<div class=profile_inner>
+<img draggable=false src=https://aniskhan001.me/img/profile.jpg alt="Anis Khan" title="Anis Khan" height=120 width=120>
 <h1>Anis Khan</h1>
 <span>I write in a text editor</span><div class=social-icons>
 <a href=https://github.com/aniskhan001 target=_blank rel="noopener noreferrer me" title=Github><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37.0 00-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44.0 0020 4.77 5.07 5.07.0 0019.91 1S18.73.65 16 2.48a13.38 13.38.0 00-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07.0 005 4.77 5.44 5.44.0 003.5 8.55c0 5.42 3.3 6.61 6.44 7A3.37 3.37.0 009 18.13V22"/></svg>
@@ -74,17 +74,21 @@
 </a>
 <a href=https://stackoverflow.com/users/1712600/aniskhan001 target=_blank rel="noopener noreferrer me" title=Stackoverflow><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M2.913 16.041v6.848h17.599v-6.848M7.16 18.696h8.925M7.65 13.937l8.675 1.8M9.214 9.124l8.058 3.758M12.086 4.65l6.849 5.66M15.774 1.111l5.313 7.162"/></svg>
 </a>
-<a href=https://steamcommunity.com/id/aniskhan001 target=_blank rel="noopener noreferrer me" title=Steam><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentcolor" stroke="none"><path d="M11.979.0C5.678.0.511 4.86.022 11.037l6.432 2.658c.545-.371 1.203-.59 1.912-.59.063.0.125.004.188.006l2.861-4.142V8.91c0-2.495 2.028-4.524 4.524-4.524 2.494.0 4.524 2.031 4.524 4.527s-2.03 4.525-4.524 4.525h-.105l-4.076 2.911c0 .052.004.105.004.159.0 1.875-1.515 3.396-3.39 3.396-1.635.0-3.016-1.173-3.331-2.727L.436 15.27C1.862 20.307 6.486 24 11.979 24c6.627.0 11.999-5.373 11.999-12S18.605.0 11.979.0zM7.54 18.21l-1.473-.61c.262.543.714.999 1.314 1.25 1.297.539 2.793-.076 3.332-1.375.263-.63.264-1.319.005-1.949s-.75-1.121-1.377-1.383c-.624-.26-1.29-.249-1.878-.03l1.523.63c.956.4 1.409 1.5 1.009 2.455-.397.957-1.497 1.41-2.454 1.012H7.54zm11.415-9.303c0-1.662-1.353-3.015-3.015-3.015-1.665.0-3.015 1.353-3.015 3.015.0 1.665 1.35 3.015 3.015 3.015 1.663.0 3.015-1.35 3.015-3.015zm-5.273-.005c0-1.252 1.013-2.266 2.265-2.266 1.249.0 2.266 1.014 2.266 2.266.0 1.251-1.017 2.265-2.266 2.265-1.253.0-2.265-1.014-2.265-2.265z"/></svg>
+<a href=https://steamcommunity.com/id/aniskhan001 target=_blank rel="noopener noreferrer me" title=Steam><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentcolor" stroke="none"><path d="M-24.6 20.8c-1.4-.8-2.7-1.5-4.1-2.3-2.4-1.5-3.6-3.6-3.3-6.5.3-3 2.8-5.2 5.8-5.3h11c2.6.0 4.6 2.2 4.7 4.7.0 2.6-2 4.8-4.6 4.9h-2.8v.2c.2.2.5.3.7.5 1.2.7 2.4 1.3 3.6 2 2.5 1.5 3.7 4.5 2.9 7.2s-3.1 4.3-6.1 4.4h-10.6c-2.4.0-4.3-1.9-4.6-4.3-.3-2.3 1.2-4.5 3.5-5.1.6-.1 1.2-.1 1.7-.2h2.1c.1.0.1-.1.1-.2zm4.3-3.8c-.1.3-.2.3-.2.4v3.9c0 1.1-.1 1.2-1.2 1.2h-5.1c-.4.0-.9.0-1.3.1-1.6.4-2.5 1.9-2.4 3.6.2 1.6 1.6 2.9 3.3 2.9h10.5c2.1.0 3.8-1.2 4.5-3.1.7-1.8.2-4.1-1.5-5.3-2.1-1.3-4.3-2.4-6.6-3.7zm-1.7 3.4v-4c0-1.4.1-1.5 1.4-1.5h5.3c1.5.0 2.7-1 3.1-2.4.6-2.2-1-4.2-3.4-4.3h-10.1c-2.4.0-4.3 1.3-4.9 3.4-.6 2.1.4 4.4 2.5 5.5 1.7 1 3.5 1.9 5.2 2.9.4.2.6.3.9.4z"/><path d="M53.3 6.9c-.2-1-1-1.7-1.9-2-1.7-.4-8.6-.4-8.6-.4s-6.9.0-8.6.5c-1 .3-1.7 1-1.9 2-.3 1.7-.5 3.5-.5 5.3s.1 3.6.5 5.3c.3.9 1 1.7 1.9 1.9 1.7.5 8.6.5 8.6.5s6.9.0 8.6-.5c1-.3 1.7-1 1.9-2 .3-1.7.5-3.5.5-5.3s-.1-3.6-.5-5.3z"/><path d="m40.6 15.5 5.7-3.3-5.7-3.3z"/><path d="M72.4-9.9c5.5.0 10 4 10 8.9.0 1.8-.8 3.8-2.1 5.4-.9 1-1.5 2.3-1.6 3.7.0-.1-.1-.1-.2-.2-.4-.4-1.1-.7-1.7-.7-.3.0-.5.0-.8.1-1.2.5-2.5.7-3.6.7-5.5.0-10-4-10-8.9s4.5-9 10-9m0-2c-6.6.0-12 4.9-12 10.9s5.4 11 12 11c1.4.0 2.8-.2 4.2-.7h.1c.1.0.2.0.3.1 1 1.3 2.5 2.3 4.2 2.7l.2-.1v-.3c-.7-.9-1-1.9-1-3s.4-2.1 1.2-2.9c1.5-1.8 2.6-4.2 2.6-6.7.1-6.1-5.3-11-11.8-11z"/><path d="M72.3-6.5c.1.0.3.1.3.2l1.2 3.4 3.7.1c.1.0.3.1.3.2s0 .3-.1.4l-3 2.2 1.1 3.5c0 .1.0.3-.1.4h-.4l-3-2.1-3 2.1h-.4c-.1-.1-.2-.2-.1-.4L69.9.0l-3-2.2c-.1-.1-.2-.2-.1-.4.0-.1.2-.2.3-.2l3.7-.1L72-6.3c0-.1.2-.2.3-.2zM46.8-20.8c2 0 4 .6 5.6 1.6-.5-.1-1.1-.2-1.6-.2-3.2.0-5.8 2.5-6 5.6l-2.2 3.2c-.5.1-.9.2-1.4.4l-4.7-1.9c.8-5 5.2-8.7 10.3-8.7m9.9 7.2c.3 1 .5 2.1.5 3.3C57.2-4.5 52.5.2 46.7.2c-1.8.0-3.6-.5-5.1-1.3.5.2 1 .2 1.5.2 2.5.0 4.5-1.9 4.8-4.3L51-7.4c3.1-.2 5.6-2.8 5.6-6 .1-.1.1-.1.1-.2M38.3-4.2l.3.2c.1.2.2.5.3.7l-.6-.9m8.5-18.1c-6.3.0-11.5 4.9-12 11l6.4 2.7c.5-.4 1.2-.6 1.9-.6h.2l2.9-4.1v-.1c0-2.5 2-4.5 4.5-4.5s4.5 2 4.5 4.5-2 4.5-4.5 4.5h-.1L46.5-6v.2c0 1.9-1.5 3.4-3.4 3.4-1.6.0-3-1.2-3.3-2.7L35.2-7c1.4 5 6 8.7 11.5 8.7 6.6.0 12-5.4 12-12s-5.3-12-11.9-12z"/><path d="M42.6-4.6 41.5-5c.2.4.5.7 1 .9 1 .4 2.1-.1 2.5-1 .2-.5.2-1 0-1.4-.2-.5-.6-.8-1-1-.5-.2-1-.2-1.4.0l1.1.5c.7.3 1 1.1.7 1.8-.3.6-1.1.9-1.8.6zm8.1-11.5c-1.5.0-2.7 1.2-2.7 2.7s1.2 2.7 2.7 2.7 2.7-1.2 2.7-2.7-1.2-2.7-2.7-2.7zm0 4.7c-1.1.0-2-.9-2-2s.9-2 2-2 2 .9 2 2c.1 1.1-.9 2-2 2zM12 0C5.4.0.0 5.4.0 12s5.4 12 12 12 12-5.4 12-12S18.6.0 12 0zm0 22c-4.3.0-8-2.7-9.4-6.5L6.2 17c.3 1.3 1.5 2.4 2.9 2.4 1.6.0 2.9-1.3 2.9-2.9v-.1l3.5-2.5h.1c2.1.0 3.9-1.8 3.9-3.9s-1.8-3.9-3.9-3.9c-2.2.0-3.9 1.8-3.9 3.9v.1l-2.5 3.6H9c-.6.0-1.2.2-1.7.5L2 11.7C2.2 6.3 6.6 2 12 2c5.5.0 10 4.5 10 10s-4.5 10-10 10zm-2.4-7.1-1.3-.5c.5-.2 1.1-.2 1.6.0s1 .7 1.2 1.2.2 1.1.0 1.7c-.5 1.1-1.8 1.7-2.9 1.2-.5-.2-.9-.6-1.1-1.1l1.3.5c.2.0.4.1.6.1.6.0 1.2-.4 1.5-1 .4-.9.0-1.8-.9-2.1zM13 9.8c0-1.5 1.2-2.6 2.6-2.6 1.5.0 2.6 1.2 2.6 2.6.0 1.5-1.2 2.6-2.6 2.6S13 11.2 13 9.8z"/><path d="M13.7 9.8c0-1.1.9-2 2-2s2 .9 2 2-.9 2-2 2c-1.1-.1-2-.9-2-2z"/></svg>
 </a>
 <a href=/resume-anis-khan.pdf target=_blank rel="noopener noreferrer me" title=Resume><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M4 4v16a2 2 0 002 2h12a2 2 0 002-2V8.342a2 2 0 00-.602-1.43l-4.44-4.342A2 2 0 0013.56 2H6A2 2 0 004 4z"/><path d="M9 13h6"/><path d="M9 17h3"/><path d="M14 2v4a2 2 0 002 2h4"/></svg>
 </a>
 </div>
 <div class=buttons>
 <a class=button href=life rel=noopener title="🌴 Life Blogs">
-<span class=button-inner>🌴 Life Blogs</span>
+<span class=button-inner>
+🌴 Life Blogs
+</span>
 </a>
 <a class=button href=tech rel=noopener title="🧑‍💻 Tech Blogs">
-<span class=button-inner>🧑‍💻 Tech Blogs</span>
+<span class=button-inner>
+🧑‍💻 Tech Blogs
+</span>
 </a>
 </div>
 </div>
@@ -95,7 +99,7 @@
 <span>
 Powered by
 <a href=https://gohugo.io/ rel="noopener noreferrer" target=_blank>Hugo</a> &
-        <a href=https://git.io/hugopapermod rel=noopener target=_blank>PaperMod</a>
+        <a href=https://github.com/adityatelange/hugo-PaperMod/ rel=noopener target=_blank>PaperMod</a>
 </span>
 </footer>
 <a href=#top aria-label="go to top" title="Go to Top (Alt + G)" class=top-link id=top-link accesskey=g><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 6" fill="currentcolor"><path d="M12 6H0l6-6z"/></svg>
