--- a/search/index.html
+++ b/search/index.html
@@ -8,8 +8,8 @@
 <meta name=description content="Search for blogs">
 <meta name=author content="Anis Khan">
 <link rel=canonical href=https://aniskhan001.me/search/>
-<link crossorigin=anonymous href=/assets/css/stylesheet.min.9907859f1602a742fdc62d4c9e2e249f9963bea382ef6df063dede9ce9e2e8dd.css integrity="sha256-mQeFnxYCp0L9xi1Mni4kn5ljvqOC723wY97enOni6N0=" rel="preload stylesheet" as=style><link crossorigin=anonymous rel=preload as=fetch href=../index.json>
-<script defer crossorigin=anonymous src=/assets/js/search.min.0cd170eeaaa85d0361e538b5b1abf543402f5d61a78e2a0b4d883c6afb0487ab.js integrity="sha256-DNFw7qqoXQNh5Ti1sav1Q0AvXWGnjioLTYg8avsEh6s="></script>
+<link crossorigin=anonymous href=/assets/css/stylesheet.e60a8f39ee6dfdeab01f9f15dd9f5b53aa8b3fb15b6a6d5c43868ea04156b023.css integrity="sha256-5gqPOe5t/eqwH58V3Z9bU6qLP7Fbam1cQ4aOoEFWsCM=" rel="preload stylesheet" as=style><link crossorigin=anonymous rel=preload as=fetch href=../index.json>
+<script defer crossorigin=anonymous src=/assets/js/search.06a800df08937e4729fbd498c648ac2a0d492f0aba8b29f05c3e52bd104aa838.js integrity="sha256-BqgA3wiTfkcp+9SYxkisKg1JLwq6iynwXD5SvRBKqDg="></script>
 <link rel=icon href=https://aniskhan001.me/icon/favicon.ico>
 <link rel=icon type=image/png sizes=16x16 href=https://aniskhan001.me/icon/favicon16x16.png>
 <link rel=icon type=image/png sizes=32x32 href=https://aniskhan001.me/icon/favicon32x32.png>
@@ -17,7 +17,6 @@
 <link rel=mask-icon href=https://aniskhan001.me/icon/apple_touch_icon.png>
 <meta name=theme-color content="#2e2e33">
 <meta name=msapplication-TileColor content="#2e2e33">
-<meta name=generator content="Hugo 0.88.1">
 <noscript>
 <style>#theme-toggle,.top-link{display:none}</style>
 <style>@media(prefers-color-scheme:dark){:root{--theme:rgb(29, 30, 32);--entry:rgb(46, 46, 51);--primary:rgb(218, 218, 219);--secondary:rgb(155, 156, 157);--tertiary:rgb(65, 66, 68);--content:rgb(196, 196, 197);--hljs-bg:rgb(46, 46, 51);--code-bg:rgb(55, 56, 62);--border:rgb(51, 51, 51)}.list{background:var(--theme)}.list:not(.dark)::-webkit-scrollbar-track{background:0 0}.list:not(.dark)::-webkit-scrollbar-thumb{border-color:var(--theme)}}</style>
@@ -43,7 +42,7 @@
 <div class=logo>
 <a href=https://aniskhan001.me/ accesskey=h title="💥 Home (Alt + H)">💥 Home</a>
 <span class=logo-switches>
-</span>
+</div>
 </div>
 <ul id=menu>
 <li>
@@ -81,7 +80,7 @@ Search for blogs
 <span>
 Powered by
 <a href=https://gohugo.io/ rel="noopener noreferrer" target=_blank>Hugo</a> &
-        <a href=https://git.io/hugopapermod rel=noopener target=_blank>PaperMod</a>
+        <a href=https://github.com/adityatelange/hugo-PaperMod/ rel=noopener target=_blank>PaperMod</a>
 </span>
 </footer>
 <a href=#top aria-label="go to top" title="Go to Top (Alt + G)" class=top-link id=top-link accesskey=g><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 6" fill="currentcolor"><path d="M12 6H0l6-6z"/></svg>
