--- a/tech/index.html
+++ b/tech/index.html
@@ -8,7 +8,7 @@
 <meta name=description content="Technical blogs written by Anis Khan">
 <meta name=author content="Anis Khan">
 <link rel=canonical href=https://aniskhan001.me/tech/>
-<link crossorigin=anonymous href=/assets/css/stylesheet.min.9907859f1602a742fdc62d4c9e2e249f9963bea382ef6df063dede9ce9e2e8dd.css integrity="sha256-mQeFnxYCp0L9xi1Mni4kn5ljvqOC723wY97enOni6N0=" rel="preload stylesheet" as=style>
+<link crossorigin=anonymous href=/assets/css/stylesheet.e60a8f39ee6dfdeab01f9f15dd9f5b53aa8b3fb15b6a6d5c43868ea04156b023.css integrity="sha256-5gqPOe5t/eqwH58V3Z9bU6qLP7Fbam1cQ4aOoEFWsCM=" rel="preload stylesheet" as=style>
 <link rel=icon href=https://aniskhan001.me/icon/favicon.ico>
 <link rel=icon type=image/png sizes=16x16 href=https://aniskhan001.me/icon/favicon16x16.png>
 <link rel=icon type=image/png sizes=32x32 href=https://aniskhan001.me/icon/favicon32x32.png>
@@ -16,7 +16,6 @@
 <link rel=mask-icon href=https://aniskhan001.me/icon/apple_touch_icon.png>
 <meta name=theme-color content="#2e2e33">
 <meta name=msapplication-TileColor content="#2e2e33">
-<meta name=generator content="Hugo 0.88.1">
 <link rel=alternate type=application/rss+xml href=https://aniskhan001.me/tech/index.xml>
 <noscript>
 <style>#theme-toggle,.top-link{display:none}</style>
@@ -41,7 +40,7 @@
 <div class=logo>
 <a href=https://aniskhan001.me/ accesskey=h title="💥 Home (Alt + H)">💥 Home</a>
 <span class=logo-switches>
-</span>
+</div>
 </div>
 <ul id=menu>
 <li>
@@ -62,7 +61,9 @@
 </header>
 <main class=main>
 <header class=page-header><div class=breadcrumbs><a href=https://aniskhan001.me/>💥 Home</a></div>
-<h1>🧑‍💻 Tech Blogs</h1>
+<h1>
+🧑‍💻 Tech Blogs
+</h1>
 <div class=post-description>
 Technical blogs written by Anis Khan
 </div>
@@ -73,11 +74,11 @@ Technical blogs written by Anis Khan
 </h2>
 <p>DevOps Engineer হতে গেলে প্রোগ্রামিং/কোডিং জানা লাগে? 🇧🇩</p>
 </header>
-<section class=entry-content>
+<div class=entry-content>
 <p>“DevOps Engineer হতে গেলে প্রোগ্রামিং/কোডিং জানা লাগে না।”
 এই ধারণাটা ইদানীং শুনতে পাচ্ছি মাঝে মাঝে। শেষ গত সপ্তাহেও সরাসরি আবার একটা প্রশ্ন পেলাম এরকম, “ভাই আমার কোডিং/প্রোগ্রামিং করতে ভাল লাগে না। কিন্তু শুনেছি DevOps হতে গেলে এইসব কিছু লাগে না। আমাকে সাজেশন দেন কিভাবে DevOps Engineer হতে পারব।” তার প্রতি আমার প্রথম সাজেশন ছিল, “যে কোন একটা প্রোগ্রামিং ল্যাঙ্গুয়েজ ব্যাসিক শিখে আসেন, তারপর বাকি সাজেশন দিব।” :)
 প্রথমেই বলে নেই, “DevOps” শব্দটা গত এক-দেড় দশকের অনেক ট্রেন্ডি ও মতভেদে খুব ‘ক্যুল’ একটা বিষয়। এবং আমার কাছে মনে হয় বিগত কয়েক বছরে টেক জগতে সবচেয়ে বেশী ভুল ধারণার বিস্তার হয়েছে এমন কয়েকটা বিষয়ের মধ্যে DevOps খুবই উপরের সারির একটা টপিক। অনেকদিন ইন্ডাস্ট্রিতে কাজ করেও অনেক রকমের বিতর্কিত ধারণা পোষণ করা সম্ভব। এই যেমন অনেকেই মনে করেন, “DevOps Engineer কোন জব রোল/টাইটেল হতে পারে না”। যেটা আমি ব্যক্তিগতভাবে মোটামোটি সমর্থন করি। কারণ DevOps হচ্ছে এক ধরনের মাইন্ডসেট বা কালচার। কালচার নিয়ে ইঞ্জিনিয়ারিং করার কিছু নেই। এটা অনুশীলন করতে হলে অন্য কিছু ইঞ্জিনিয়ারিং প্র্যাকটিস অনুসরণ করতে হবে, সফটওয়্যার ইঞ্জিনিয়ারিং প্র্যাকটিস অনেকগুলো প্র্যাকটিসের মধ্যে একটা। তবে দিন শেষে সেই মাইন্ডসেটে কাজ ঠিকঠাক ভাবে হলে রোল নিয়ে তেমন মাতামাতি করার কিছু নাই বলেও আমি বিশ্বাস করি। যাই হোক, এই ধারণা নিয়ে অনেক বিতর্ক আছে এবং আলোচনা করতে গেলে অনেক বড় পোস্ট লেখা যাবে। কিন্তু… “DevOps Engineer হতে গেলে প্রোগ্রামিং/কোডিং জানা লাগে না” এই ধারণা অনেক বড় ভুল বলে আমি মনে করি। যেটা ইদানীংকালে অনেক ভার্সিটি পড়ুয়া তরুণদের মধ্যে বিরাজ করছে। কেউ যাতে শুরুর দিকেই পথভ্রষ্ট না হয়ে যায়, সেটা চিন্তা করে ভাবলাম DevOps নিয়ে ইন্ডাস্ট্রিতে কাজ করে আমার যতটুকু ধারণা হয়েছে সেইটা সবার সাথে শেয়ার করি।...</p>
-</section>
+</div>
 <footer class=entry-footer><span title="2022-09-24 00:00:00 +0000 UTC">September 24, 2022</span>&nbsp;·&nbsp;7 min&nbsp;·&nbsp;Anis Khan</footer>
 <a class=entry-link aria-label="post link to DevOps vs Programming 🤔" href=https://aniskhan001.me/tech/devops-vs-programming/></a>
 </article>
@@ -87,10 +88,10 @@ Technical blogs written by Anis Khan
 </h2>
 <p>You might think the world is object-oriented. But it's not! 🇧🇩</p>
 </header>
-<section class=entry-content>
+<div class=entry-content>
 <p>A sample program of mine, but not directly related to OOP or SOLID
 আমরা যারা ভার্সিটিতে কম্পিউটার সায়েন্স বা অন্যান্য ইঞ্জিনিয়ারিং বিষয়ে পড়াশুনা করে এসেছি বা এখনো করছি, মোটামুটি সবারই Object Oriented Programming বা OOP শিখতে হয়েছে। যেখানে Encapsulation, Inheritence, Polymorphism ইত্যাদি বিষয়গুলো থাকে। এবং প্রায় সময়ই OOP বোঝার জন্য কিছু সাধারণ উদাহরণ আমরা দেখে এসেছি.. যেমন Vehicle নামে একটা class. এখান থেকে কমন জিনিসগুলো যেমন চাকা, বডি, ইত্যাদি নিয়ে গাড়ি, বাস, ট্রাক ইত্যাদি object হতে পারে। গাড়ির ক্লাস থেকে আবার কিছু অবজেক্ট রং পরিবর্তন করে লাল গাড়ি, নীল গাড়ি, সবুজ গাড়ি ইত্যাদি হতে পারে। অনেকে পরিবারের সম্পর্ক দিয়ে বোঝার চেষ্টা করে....</p>
-</section>
+</div>
 <footer class=entry-footer><span title="2020-05-09 00:00:00 +0000 UTC">May 9, 2020</span>&nbsp;·&nbsp;4 min&nbsp;·&nbsp;Anis Khan</footer>
 <a class=entry-link aria-label="post link to OOP থেকে কি শিখলাম? 🎯" href=https://aniskhan001.me/tech/oop-%E0%A6%A5%E0%A7%87%E0%A6%95%E0%A7%87-%E0%A6%95%E0%A6%BF-%E0%A6%B6%E0%A6%BF%E0%A6%96%E0%A6%B2%E0%A6%BE%E0%A6%AE/></a>
 </article>
@@ -100,10 +101,10 @@ Technical blogs written by Anis Khan
 </h2>
 <p>Minimal Logging Architecture in Kubernetes with Grafana</p>
 </header>
-<section class=entry-content>
+<div class=entry-content>
 <p>Motivation For a small Kubernetes cluster, I needed a minimal dashboard where logs from all the running applications in the Kubernetes environment can be viewed or grepped from one place.
 I thought about ELK (Elastic + Logstash + Kibana) first, but then I realized my small cluster has a config of only 2 nodes with a total 2 vCPU and 4GB RAM, which wouldn’t be a wise option for Elastic to run since it requires more resources to run smoothly....</p>
-</section>
+</div>
 <footer class=entry-footer><span title="2020-04-15 00:00:00 +0000 UTC">April 15, 2020</span>&nbsp;·&nbsp;5 min&nbsp;·&nbsp;Anis Khan</footer>
 <a class=entry-link aria-label="post link to Logging with Fluent Bit & InfluxDB 🪵" href=https://aniskhan001.me/tech/logging-with-fluent-bit-influxdb-fig/></a>
 </article>
@@ -113,10 +114,10 @@ I thought about ELK (Elastic + Logstash + Kibana) first, but then I realized my 
 </h2>
 <p></p>
 </header>
-<section class=entry-content>
+<div class=entry-content>
 <p>"If you’re building Docker images on your laptop for tagging release, be in shame, and then change your behavior" - Kelsey Hightower, 2018
 That’s right! If you are building Docker images in your local machine, you are doing it wrong. We don’t want to build anything on our laptop. When we are tagging a new release for production, staging, or even for a dev environment, the build should trigger automatically to save time and avoid the hassle....</p>
-</section>
+</div>
 <footer class=entry-footer><span title="2020-01-14 00:00:00 +0000 UTC">January 14, 2020</span>&nbsp;·&nbsp;5 min&nbsp;·&nbsp;Anis Khan</footer>
 <a class=entry-link aria-label="post link to Speed up Docker build in CI environment 🏎" href=https://aniskhan001.me/tech/speed-up-docker-build-ci-environment/></a>
 </article>
@@ -126,15 +127,16 @@ That’s right! If you are building Docker images in your local machine, you are
 </h2>
 <p></p>
 </header>
-<section class=entry-content>
+<div class=entry-content>
 <p>Motivation 🌌 🌠 Recently I worked on a MeteorJS project. The live version of the app is hosted on Galaxy and there was no staging environment for this one. So we needed to deploy another instance of this app in a staging environment. The codebase was hosted on GitLab and we have a shared cluster of MongoDB in mLab. While we wanted to run the staging environment efficiently, we also wanted to make sure the deployment is as cost-effective as we can....</p>
-</section>
+</div>
 <footer class=entry-footer><span title="2018-07-30 00:00:00 +0000 UTC">July 30, 2018</span>&nbsp;·&nbsp;3 min&nbsp;·&nbsp;Anis Khan</footer>
 <a class=entry-link aria-label="post link to Easy Continuous Delivery for Meteor app with GitLab + Heroku" href=https://aniskhan001.me/tech/easy-continuous-delivery-for-meteor-app-with-gitlab-heroku/></a>
 </article>
 <footer class=page-footer>
 <nav class=pagination>
-<a class=next href=https://aniskhan001.me/tech/page/2/>Next Page »</a>
+<a class=next href=https://aniskhan001.me/tech/page/2/>Next&nbsp;&nbsp;»
+</a>
 </nav>
 </footer>
 </main>
@@ -143,7 +145,7 @@ That’s right! If you are building Docker images in your local machine, you are
 <span>
 Powered by
 <a href=https://gohugo.io/ rel="noopener noreferrer" target=_blank>Hugo</a> &
-        <a href=https://git.io/hugopapermod rel=noopener target=_blank>PaperMod</a>
+        <a href=https://github.com/adityatelange/hugo-PaperMod/ rel=noopener target=_blank>PaperMod</a>
 </span>
 </footer>
 <a href=#top aria-label="go to top" title="Go to Top (Alt + G)" class=top-link id=top-link accesskey=g><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 6" fill="currentcolor"><path d="M12 6H0l6-6z"/></svg>
