--- a/life/প্রোগ্রামিং-কন্টেস্ট-বাচ্চারা-করে/index.html
+++ b/life/প্রোগ্রামিং-কন্টেস্ট-বাচ্চারা-করে/index.html
@@ -21,6 +21,7 @@
 <style>#theme-toggle,.top-link{display:none}</style>
 <style>@media(prefers-color-scheme:dark){:root{--theme:rgb(29, 30, 32);--entry:rgb(46, 46, 51);--primary:rgb(218, 218, 219);--secondary:rgb(155, 156, 157);--tertiary:rgb(65, 66, 68);--content:rgb(196, 196, 197);--hljs-bg:rgb(46, 46, 51);--code-bg:rgb(55, 56, 62);--border:rgb(51, 51, 51)}.list{background:var(--theme)}.list:not(.dark)::-webkit-scrollbar-track{background:0 0}.list:not(.dark)::-webkit-scrollbar-thumb{border-color:var(--theme)}}</style>
 </noscript>
+<script type=text/javascript>(function(a,e,b,f,g,c,d){a[b]=a[b]||function(){(a[b].q=a[b].q||[]).push(arguments)},c=e.createElement(f),c.async=1,c.src="https://www.clarity.ms/tag/"+g,d=e.getElementsByTagName(f)[0],d.parentNode.insertBefore(c,d)})(window,document,"clarity","script","frqcj1akf9")</script>
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-HKTS2WR0QV"></script>
 <script>var doNotTrack=!1;if(!doNotTrack){window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)}gtag('js',new Date),gtag('config','G-HKTS2WR0QV',{anonymize_ip:!1})}</script>
 <meta property="og:title" content="প্রোগ্রামিং কন্টেস্ট কি বাচ্চারাই করে?">
@@ -122,7 +123,7 @@
 </article>
 </main>
 <footer class=footer>
-<span>&copy; 2023 <a href=https://aniskhan001.me/>Anis Khan</a></span>
+<span>&copy; 2024 <a href=https://aniskhan001.me/>Anis Khan</a></span>
 <span>
 Powered by
 <a href=https://gohugo.io/ rel="noopener noreferrer" target=_blank>Hugo</a> &
